--- a/DIM3/trunk/meow/templates/base.html
+++ b/DIM3/trunk/meow/templates/base.html
@@ -20,6 +20,7 @@
 
 	<script type="text/Javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
 	<script type="text/Javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.js"></script>
+    <script src="/site_media/js/jquery.noisy.js"></script>
     <script src="/site_media/js/load.js"></script>
 
 </head>
@@ -34,7 +35,7 @@
 			
 			<div id="nav">
 			{% if user.is_authenticated %}
-			    <a href="/accounts/options" class="button left"><span class="cog icon"></span>{{ user.username|upper }}</a><a href="/accounts/logout" class="button primary right"><span class="user icon"></span>LOGOUT</a>
+			    <a href="/accounts/options/" class="button left"><span class="cog icon"></span>{{ user.username|upper }}</a><a href="/accounts/logout/" class="button primary right"><span class="user icon"></span>LOGOUT</a>
 			{% else %}
 			    <a href="/accounts/login/" class="button left"><span class="key icon"></span>LOGIN</a><a href="/accounts/register/" class="button primary right"><span class="user icon"></span>REGISTER</a>
 			{% endif %}
@@ -56,7 +57,7 @@
     <div id="footer">
         <div class="container">
             <div class="padding">
-                This is the footer!
+                Copyright &copy; 2011 Team G: Ewan Baird, Heather Hoaglund-Biron, Gordon Martin &amp; James McMinn.
             </div>
         </div>
     </div>
