Couple more changes. Really going to ned now.

--- a/DIM3/trunk/meow/templates/main.html
+++ b/DIM3/trunk/meow/templates/main.html
@@ -42,7 +42,7 @@
 	    <div class="divider"></div>
 	    
 	    <div id="lastmeow">
-	        <span class="num"><a href="/meow/{{ last_meow.pk }}/">{{ last_meow.time|date:"b jS"|capfirst }}</a></span><span class="meow"> {{ last_meow.meow }} </span>
+	        <span class="num"><a href="/meow/{{ last_meow.pk }}/">{{ last_meow.time|date:"b jS"|capfirst }}:</a></span><span class="meow"> {{ last_meow.meow }} </span>
 	    </div>
 	    
 	    <div class="divider"></div>
